Fixes issue with gravatar section on small devices

--- a/src/_scss/layout/_account.scss
+++ b/src/_scss/layout/_account.scss
@@ -9,6 +9,7 @@ section.user-info {
 
         span {
             margin-left: 5.75em;
+            display: block;
         }
 
         img {
